# robotis_hand

./: README.md  fingertip_gpt.html  fingertip_gpt_2.html  fingertip_visualizer.html  visualize_fingertip_sensor.html
.github/workflows/: ros-ci.yml
docker/: Dockerfile  container.sh  docker-compose.yml
robotis_hand/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_hand_bringup/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
robotis_hand_bringup/config/: hx5_d20_left_initial_positions.yaml  hx5_d20_right_initial_positions.yaml  rh_5_hardware_controller_manager.yaml  rh_5_initial_positions.yaml  rh_5_left_initial_positions.yaml  robotis_hand_hardware_controller_manager.yaml
robotis_hand_bringup/launch/: hx5_d20_left.launch.py  hx5_d20_left_gazebo.launch.py  hx5_d20_right.launch.py  hx5_d20_right_gazebo.launch.py  rh_5_left.launch.py  rh_5_left_gazebo.launch.py  rh_5_right.launch.py  rh_5_right_gazebo.launch.py  rh_p12_rn_a.launch.py  rh_p12_rn_a_gazebo.launch.py
robotis_hand_bringup/robotis_hand_bringup/: joint_trajectory_executor.py
robotis_hand_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_hand_description/gazebo/: hx5_d20_left.gazebo.xacro  hx5_d20_right.gazebo.xacro  rh_5_right.gazebo.xacro  rh_p12_rn_a.gazebo.xacro
robotis_hand_description/launch/: hx5_d20_left.launch.py  hx5_d20_right.launch.py  rh_5_left.launch.py  rh_p12_rn_a.launch.py
robotis_hand_description/meshes/: 18_thumb_finger_mcp.stl
robotis_hand_description/ros2_control/: rh_5_left.ros2_control.xacro  rh_5_right.ros2_control.xacro  robotis_hand.ros2_control.xacro
robotis_hand_description/rviz/: robotis_hand.rviz
robotis_hand_description/urdf/: rh_5_left.urdf.xacro  rh_5_left.xacro  rh_5_right.urdf.xacro  rh_5_right.xacro  robotis_hand.urdf.xacro  robotis_hand.xacro
robotis_hand_ik_teleop/src/: hand_ik_teleop.cpp
robotis_hand_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_hand_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  rh_5_right.srdf  rh_p12_rn_a.srdf  robotis_hand.srdf
robotis_hand_moveit_config/launch/: hx5_d20_left_moveit.launch.py  (+3 more)
robotis_hand_teleop/: package.xml  setup.py
(+23 files in other folders)
