<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotis_hand_bringup</name>
  <version>0.0.1</version>
  <description>robotis_hand bringup ROS 2 package.</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/ROBOTIS-GIT/robotis_hand</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/robotis_hand/issues</url>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <author email="nhw@robotis.com">Hyunwoo Nam</author>
  <depend>rclpy</depend>
  <depend>dynamixel_hardware_interface</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_image</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robotis_hand_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
